# Alijahon

./: .gitignore  TODO  db.sqlite3  pyproject.toml
apps/: admin.py  forms.py  urls.py  views.py
apps/fixtures/: district.json  regions.json
apps/migrations/: 0001_initial.py
apps/models/: proxy.py  shop.py  users.py
apps/templatetags/: category_tags.py
apps/views/: __init__.py  admin_page.py  auths.py  categories.py  favourite.py  orders.py  others.py  products.py  streams.py
root/: ckeditor_settings.py  jazzmin_settings.py  settings.py
templates/: test.html
templates/admin/: base_site.html
templates/apps/admin-page/: competition.html  favourite.html  market.html  payment.html  stream.html
templates/apps/auth/: profile-settings.html  profile.html
templates/apps/order/: order-list.html
templates/apps/parts/: _header.html  _sidebar.html
templates/apps/product/: product-statistics.html
